--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -14,11 +14,11 @@ body {
 }
 .display-2 {
   font-family: 'Open Sans', sans-serif;
-  font-size: 2.6rem;
+  font-size: 2rem;
   line-height: 1.1;
 }
 .display-2 > .mbr-iconfont {
-  font-size: 3.25rem;
+  font-size: 2.5rem;
 }
 .display-4 {
   font-family: 'Open Sans', sans-serif;
@@ -61,9 +61,9 @@ body {
     line-height: calc( 1.1 * (1.8399999999999999rem + (3.4 - 1.8399999999999999) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-2 {
-    font-size: 2.08rem;
-    font-size: calc( 1.56rem + (2.6 - 1.56) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.3 * (1.56rem + (2.6 - 1.56) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 1.6rem;
+    font-size: calc( 1.35rem + (2 - 1.35) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.3 * (1.35rem + (2 - 1.35) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-4 {
     font-size: 0.8rem;
@@ -1184,6 +1184,8 @@ a {
   color: #40b38d;
 }
 .cid-sUjjsgzBe0 {
+  padding-top: 7rem;
+  padding-bottom: 7rem;
   background-image: url("../../../assets/images/bg-1.png");
 }
 .cid-sQshFpSlc1 {
@@ -1203,11 +1205,15 @@ a {
   color: #40b38d;
 }
 .cid-sQrBwrWh2U {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
+  padding-top: 5rem;
+  padding-bottom: 3rem;
   background-color: #424a4d;
 }
 .cid-sQrBwrWh2U .mbr-section-title {
+  color: #ffffff;
+}
+.cid-sQrBwrWh2U .mbr-text,
+.cid-sQrBwrWh2U .mbr-section-btn {
   color: #ffffff;
 }
 .cid-sQrC4Oh687 {
@@ -1288,13 +1294,10 @@ a {
     margin-bottom: 2rem;
   }
 }
-#hrblock-block-p hr {
-  margin: 0;
-}
 .cid-sQrC13kvxO {
   padding-top: 4rem;
   padding-bottom: 6rem;
-  background-color: #ffffff;
+  background-color: #fafafa;
 }
 .cid-sQrC13kvxO .mbr-iconfont {
   font-size: 1.4rem !important;
@@ -1325,11 +1328,20 @@ a {
   text-align: left;
   color: #40b38d;
 }
-#hrblock-block-u hr {
-  margin: 0;
+.cid-sQrC13kvxO H4 {
+  text-align: left;
+}
+.cid-sUjZ7Dgwqd {
+  padding-top: 0rem;
+  padding-bottom: 2rem;
+  background-image: url("../../../assets/images/3d-rendering-bunch-of-whatsapp-square-badges-top-view-1024x576.jpeg");
+}
+.cid-sUjZ7Dgwqd .bgtext {
+  display: inline;
+  border-radius: 0;
 }
 .cid-sQrAY09jID {
-  padding-top: 4rem;
+  padding-top: 6rem;
   padding-bottom: 2rem;
   background-color: #ffffff;
 }
@@ -1351,13 +1363,14 @@ a {
 }
 .cid-sQrAY09jID .mbr-section-title {
   text-align: center;
+  color: #353535;
 }
 .cid-sQrAY09jID H5 {
   color: #40b38d;
 }
 .cid-sQsrySmfea {
   padding-top: 5rem;
-  padding-bottom: 2rem;
+  padding-bottom: 5rem;
   background-color: #ffffff;
 }
 @media (max-width: 991px) {
@@ -1503,4 +1516,42 @@ a {
 }
 .cid-sQrC8KKSLK .hidden {
   display: none;
+}
+.cid-sUk9qNscPd {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #ffffff;
+}
+.cid-sUk9qNscPd .content-wrapper {
+  background: #fafafa;
+}
+@media (max-width: 991px) {
+  .cid-sUk9qNscPd .content-wrapper .row {
+    flex-direction: column-reverse;
+  }
+  .cid-sUk9qNscPd .content-wrapper .image-wrapper {
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-sUk9qNscPd .content-wrapper {
+    padding: 1rem;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .cid-sUk9qNscPd .content-wrapper {
+    padding: 2rem;
+  }
+}
+@media (min-width: 992px) {
+  .cid-sUk9qNscPd .content-wrapper {
+    padding: 5rem 3rem;
+  }
+  .cid-sUk9qNscPd .content-wrapper .text-wrapper {
+    padding-right: 2rem;
+  }
+}
+.cid-sUk9qNscPd .image-wrapper img {
+  width: 100%;
+  object-fit: cover;
 }
