--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1056,6 +1056,24 @@ a {
   color: #ffffff;
   text-align: center;
 }
+.cid-sUkrxl4cJU {
+  padding-top: 6rem;
+  padding-bottom: 0rem;
+  background-color: #fafafa;
+}
+.cid-sUkrxl4cJU .image-wrap img {
+  width: 100%;
+}
+@media (min-width: 992px) {
+  .cid-sUkrxl4cJU .image-wrap img {
+    display: block;
+    margin: auto;
+    width: 50%;
+  }
+}
+.cid-sUkrxl4cJU .mbr-section-title {
+  color: #40b38d;
+}
 .cid-sQshJUAB4D {
   padding-top: 1rem;
   padding-bottom: 0rem;
@@ -1093,6 +1111,10 @@ a {
 .cid-sQshJUAB4D .image-wrapper img {
   width: 100%;
   object-fit: cover;
+}
+.cid-sQshJUAB4D .mbr-text,
+.cid-sQshJUAB4D .mbr-section-btn {
+  color: #353535;
 }
 .cid-sUjmwNN8ya {
   padding-top: 0rem;
@@ -1188,21 +1210,95 @@ a {
   padding-bottom: 7rem;
   background-image: url("../../../assets/images/bg-1.png");
 }
-.cid-sQshFpSlc1 {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
+.cid-sUkhUpe3GP {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
   background-color: #ffffff;
 }
-.cid-sQshFpSlc1 .video-wrapper iframe {
+@media (max-width: 767px) {
+  .cid-sUkhUpe3GP .row {
+    flex-direction: column-reverse;
+  }
+  .cid-sUkhUpe3GP .mbr-figure {
+    margin-bottom: 1.5rem;
+  }
+}
+.cid-sUkhUpe3GP .row {
+  align-items: center;
+}
+@media (min-width: 992px) {
+  .cid-sUkhUpe3GP .text-wrapper {
+    padding: 0 2rem;
+  }
+}
+.cid-sUkhUpe3GP .media-content,
+.cid-sUkhUpe3GP .mbr-figure {
+  align-self: center;
+}
+.cid-sUkhUpe3GP .mbr-figure iframe {
   width: 100%;
 }
-.cid-sQshFpSlc1 .mbr-section-title,
-.cid-sQshFpSlc1 .mbr-section-subtitle,
-.cid-sQshFpSlc1 .mbr-text {
-  text-align: center;
-}
-.cid-sQshFpSlc1 .mbr-section-title {
+.cid-sUkhUpe3GP .mbr-section-title {
   color: #40b38d;
+}
+.cid-sUkhWKYo2p {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #fafafa;
+}
+.cid-sUkhWKYo2p img,
+.cid-sUkhWKYo2p .item-img {
+  width: 100%;
+}
+.cid-sUkhWKYo2p .item:focus,
+.cid-sUkhWKYo2p span:focus {
+  outline: none;
+}
+.cid-sUkhWKYo2p .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-sUkhWKYo2p .row {
+  margin-left: 0;
+  margin-right: 0;
+}
+.cid-sUkhWKYo2p .item {
+  padding: 0;
+  margin: 0;
+}
+.cid-sUkhWKYo2p .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #ffffff;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-sUkhWKYo2p .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-sUkhWKYo2p .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-sUkhWKYo2p .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-sUkhWKYo2p .mbr-section-title {
+  color: #232323;
+}
+.cid-sUkhWKYo2p .mbr-text,
+.cid-sUkhWKYo2p .mbr-section-btn {
+  text-align: left;
+}
+.cid-sUkhWKYo2p .item-title {
+  text-align: left;
+}
+.cid-sUkhWKYo2p .item-subtitle {
+  text-align: left;
 }
 .cid-sQrBwrWh2U {
   padding-top: 5rem;
