update new site

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1038,7 +1038,7 @@ a {
   }
 }
 .cid-sQrAS3e6cp {
-  background-image: url("../../../assets/images/why-kei-8e2gal-gie8-unsplash.jpg");
+  background-image: url("../../../assets/images/image.jpeg");
 }
 .cid-sQrAS3e6cp .mbr-section-title {
   color: #ffffff;
