update new site

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1054,9 +1054,9 @@ a {
   text-align: center;
 }
 .cid-sUkrxl4cJU {
-  padding-top: 10rem;
-  padding-bottom: 10rem;
-  background-image: url("../../../assets/images/carbuying-1.jpeg");
+  padding-top: 5rem;
+  padding-bottom: 3rem;
+  background-color: #fafafa;
 }
 .cid-sUkrxl4cJU .image-wrap img {
   width: 100%;
@@ -1073,7 +1073,7 @@ a {
 }
 .cid-sUkrxl4cJU .mbr-text,
 .cid-sUkrxl4cJU .mbr-section-btn {
-  color: #ffffff;
+  color: #353535;
 }
 .cid-sQshJUAB4D {
   padding-top: 1rem;
@@ -1439,7 +1439,7 @@ a {
 }
 .cid-sQrAY09jID {
   padding-top: 6rem;
-  padding-bottom: 2rem;
+  padding-bottom: 3rem;
   background-color: #ffffff;
 }
 .cid-sQrAY09jID .mbr-overlay {
