--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,3 +1,6 @@
+.btn {
+  border-width: 2px;
+}
 body {
   font-family: Jost;
 }
@@ -289,7 +292,7 @@ body {
 .btn-primary-outline,
 .btn-primary-outline:active {
   background-color: transparent !important;
-  border-color: transparent;
+  border-color: #40b38d;
   color: #40b38d;
 }
 .btn-primary-outline:hover,
@@ -298,7 +301,7 @@ body {
 .btn-primary-outline.active {
   color: #29735b !important;
   background-color: transparent!important;
-  border-color: transparent!important;
+  border-color: #29735b !important;
   box-shadow: none!important;
 }
 .btn-primary-outline.disabled,
@@ -310,7 +313,7 @@ body {
 .btn-secondary-outline,
 .btn-secondary-outline:active {
   background-color: transparent !important;
-  border-color: transparent;
+  border-color: #374b43;
   color: #374b43;
 }
 .btn-secondary-outline:hover,
@@ -319,7 +322,7 @@ body {
 .btn-secondary-outline.active {
   color: #121916 !important;
   background-color: transparent!important;
-  border-color: transparent!important;
+  border-color: #121916 !important;
   box-shadow: none!important;
 }
 .btn-secondary-outline.disabled,
@@ -331,7 +334,7 @@ body {
 .btn-info-outline,
 .btn-info-outline:active {
   background-color: transparent !important;
-  border-color: transparent;
+  border-color: #7ca0eb;
   color: #7ca0eb;
 }
 .btn-info-outline:hover,
@@ -340,7 +343,7 @@ body {
 .btn-info-outline.active {
   color: #3169e0 !important;
   background-color: transparent!important;
-  border-color: transparent!important;
+  border-color: #3169e0 !important;
   box-shadow: none!important;
 }
 .btn-info-outline.disabled,
@@ -352,7 +355,7 @@ body {
 .btn-success-outline,
 .btn-success-outline:active {
   background-color: transparent !important;
-  border-color: transparent;
+  border-color: #9ab0a6;
   color: #9ab0a6;
 }
 .btn-success-outline:hover,
@@ -361,7 +364,7 @@ body {
 .btn-success-outline.active {
   color: #6b897b !important;
   background-color: transparent!important;
-  border-color: transparent!important;
+  border-color: #6b897b !important;
   box-shadow: none!important;
 }
 .btn-success-outline.disabled,
@@ -373,7 +376,7 @@ body {
 .btn-warning-outline,
 .btn-warning-outline:active {
   background-color: transparent !important;
-  border-color: transparent;
+  border-color: #426cb3;
   color: #426cb3;
 }
 .btn-warning-outline:hover,
@@ -382,7 +385,7 @@ body {
 .btn-warning-outline.active {
   color: #2b4674 !important;
   background-color: transparent!important;
-  border-color: transparent!important;
+  border-color: #2b4674 !important;
   box-shadow: none!important;
 }
 .btn-warning-outline.disabled,
@@ -394,7 +397,7 @@ body {
 .btn-danger-outline,
 .btn-danger-outline:active {
   background-color: transparent !important;
-  border-color: transparent;
+  border-color: #ff9966;
   color: #ff9966;
 }
 .btn-danger-outline:hover,
@@ -403,7 +406,7 @@ body {
 .btn-danger-outline.active {
   color: #ff5f0f !important;
   background-color: transparent!important;
-  border-color: transparent!important;
+  border-color: #ff5f0f !important;
   box-shadow: none!important;
 }
 .btn-danger-outline.disabled,
@@ -415,7 +418,7 @@ body {
 .btn-black-outline,
 .btn-black-outline:active {
   background-color: transparent !important;
-  border-color: transparent;
+  border-color: #232323;
   color: #232323;
 }
 .btn-black-outline:hover,
@@ -424,7 +427,7 @@ body {
 .btn-black-outline.active {
   color: #000000 !important;
   background-color: transparent!important;
-  border-color: transparent!important;
+  border-color: #000000 !important;
   box-shadow: none!important;
 }
 .btn-black-outline.disabled,
@@ -436,7 +439,7 @@ body {
 .btn-white-outline,
 .btn-white-outline:active {
   background-color: transparent !important;
-  border-color: transparent;
+  border-color: #fafafa;
   color: #fafafa;
 }
 .btn-white-outline:hover,
@@ -445,7 +448,7 @@ body {
 .btn-white-outline.active {
   color: #cfcfcf !important;
   background-color: transparent!important;
-  border-color: transparent!important;
+  border-color: #cfcfcf !important;
   box-shadow: none!important;
 }
 .btn-white-outline.disabled,
@@ -1050,7 +1053,7 @@ a {
 }
 .cid-sQrAS3e6cp .mbr-text,
 .cid-sQrAS3e6cp .mbr-section-btn {
-  color: #ffffff;
+  color: #fafafa;
   text-align: center;
 }
 .cid-sUkrxl4cJU {
@@ -1210,37 +1213,6 @@ a {
   padding-top: 7rem;
   padding-bottom: 7rem;
   background-image: url("../../../assets/images/bg-1.png");
-}
-.cid-sUkhUpe3GP {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-  background-color: #ffffff;
-}
-@media (max-width: 767px) {
-  .cid-sUkhUpe3GP .row {
-    flex-direction: column-reverse;
-  }
-  .cid-sUkhUpe3GP .mbr-figure {
-    margin-bottom: 1.5rem;
-  }
-}
-.cid-sUkhUpe3GP .row {
-  align-items: center;
-}
-@media (min-width: 992px) {
-  .cid-sUkhUpe3GP .text-wrapper {
-    padding: 0 2rem;
-  }
-}
-.cid-sUkhUpe3GP .media-content,
-.cid-sUkhUpe3GP .mbr-figure {
-  align-self: center;
-}
-.cid-sUkhUpe3GP .mbr-figure iframe {
-  width: 100%;
-}
-.cid-sUkhUpe3GP .mbr-section-title {
-  color: #40b38d;
 }
 .cid-sUkhWKYo2p {
   padding-top: 6rem;
@@ -1428,14 +1400,46 @@ a {
 .cid-sQrC13kvxO H4 {
   text-align: left;
 }
-.cid-sUjZ7Dgwqd {
+.cid-sUClsF86EU {
   padding-top: 0rem;
-  padding-bottom: 2rem;
-  background-image: url("../../../assets/images/3d-rendering-bunch-of-whatsapp-square-badges-top-view-1024x576.jpeg");
+  padding-bottom: 0rem;
+  background-color: #fafafa;
 }
-.cid-sUjZ7Dgwqd .bgtext {
-  display: inline;
-  border-radius: 0;
+.cid-sUClsF86EU .content-wrapper {
+  background: #ffffff;
+}
+@media (max-width: 991px) {
+  .cid-sUClsF86EU .content-wrapper .row {
+    flex-direction: column-reverse;
+  }
+  .cid-sUClsF86EU .content-wrapper .image-wrapper {
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-sUClsF86EU .content-wrapper {
+    padding: 1rem;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .cid-sUClsF86EU .content-wrapper {
+    padding: 2rem;
+  }
+}
+@media (min-width: 992px) {
+  .cid-sUClsF86EU .content-wrapper {
+    padding: 5rem 3rem;
+  }
+  .cid-sUClsF86EU .content-wrapper .text-wrapper {
+    padding-right: 2rem;
+  }
+}
+.cid-sUClsF86EU .image-wrapper img {
+  width: 100%;
+  object-fit: cover;
+}
+.cid-sUClsF86EU .card-title {
+  color: #40b38d;
 }
 .cid-sQrAY09jID {
   padding-top: 6rem;
