--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1564,6 +1564,7 @@ a {
 }
 .cid-sQsrMzLBC3 .copyright > p {
   color: #ffffff;
+  text-align: left;
 }
 .cid-sQrCaMuIaW .progress-container {
   z-index: 20000;
